--- a/view/index.html
+++ b/view/index.html
@@ -1,15 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Sutherland</title>
     <script type="module" crossorigin src="/assets/index-3bb12518.js"></script>
-    <link rel="stylesheet" href="/assets/index-4dccedd9.css">
+    <link rel="stylesheet" href="/assets/index-4dccedd9.css" />
   </head>
   <body>
     <div id="root"></div>
-    
   </body>
 </html>
